--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Terminal</title>
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-    <link rel="icon" type="image/x-icon" href="/assets/terminal.png" />
+    <link rel="icon" href="assets/terminal.png" type="image/icon type" />
   </head>
   <body>
     <div id="terminal">
